--- a/섹션5. 엔티티 매핑/3. 필드와 컬럼 매핑.md
+++ b/섹션5. 엔티티 매핑/3. 필드와 컬럼 매핑.md
@@ -58,9 +58,11 @@
 
 - 지정할 수 있는 속성이 없다.
 
-- 매핑하는 필드 타입이 문자 : CLOB - String, char[], java.sql.CLOB
+- 매핑하는 필드 타입이 문자 : CLOB - String, char[], java.sql.CLOB 등 `사이즈 큰 데이터를 외부 파일로 저장하기 위한 타입`
 
-- 나머지 바이트 등 : BLOB : byte[], java.sql.BLOB
+- 나머지 바이트 등 : BLOB : byte[], java.sql.BLOB 등 `바이너리 데이터를 db외부에 저장하기 위한 타입`
+
+- @LOB 타입은 데이터를 변수에 저장한다기 보다는 DB에 저장된 LOB값 위치 포인터 저장, select 로 가져와도
 
 ## @Transient
 
