--- a/섹션6. 연관관계 매핑 기초/2. 양방향 연관관계.md
+++ b/섹션6. 연관관계 매핑 기초/2. 양방향 연관관계.md
@@ -110,3 +110,19 @@ mappedBy
 - MEMBER 테이블의 TEAM_ID(FK) 라면, Member객체의 Team team을 주인으로, Team객체의 List members를 mappedby로 지정
 
 - 비즈니스적으로 중요하다기 보단 매핑(연관관계) 관리 난이도 때문에 이렇게.
+
+
+
+```java
+public class Team {
+    // ...
+    @OneToMany(mappedBy = "team")
+    private List<Member> members = new ArrayList<>();
+
+    //==연관관계 편의 메소드==//
+    public void addMember(Member member) {
+        this.members.add(member); // 1. Team의 members 리스트에 Member 추가 (객체 관점)
+        member.setTeam(this);     // 2. Member의 team 필드에 현재 Team 설정 (주인에게 값 설정 -> DB 반영)
+    }
+}
+```
