--- a/섹션7. 다양한 연관관계 매핑/3.일대일1_1.md
+++ b/섹션7. 다양한 연관관계 매핑/3.일대일1_1.md
@@ -59,3 +59,41 @@
 - 양방향으로 만들어야 할 것
 
 ## 프록시 객체란?
+
+- 실제 객체를 대신하는 가짜 객체
+
+- JPA에서 주로 지연로딩Lazy Loading 구현 위해 사용
+
+- 당장 필요하지 않은  데이터를 바로 조회하는게 아니라 실제 사용 시점에 한번만 조회하는 것
+
+
+
+### 프록시 동작 방식
+
+- 프록시 객체는 실제 엔티티 클래스를 상속받아서 만들어진다. 겉모습, 사용방법이 실제 객체와 동일
+
+- 조회 요청시, 지연 로딩이 설정되어 있다면, JPA는 실제 객체가 아니라 프록시 객체를 반환, SQL 쿼리 X
+
+- 실제 사용시, 프록시 객체에는 실제 객체의 ID만 들어있기 때문에, 값을 가져와야 한다. 
+
+- 즉, 이 시점에 프록시는 JPA를 통해 영속성 컨텍스트에 실제 엔티티 생성을 요청하고, SELECT 쿼리 전송
+
+- 조회된 실제 객체와 자신(프록시 객체)를 연결하고, 요청받은 메서드를 실제 객체에 위임한다.
+
+
+
+## 대상 테이블에 외래키가 있을 때 프록시의 한계
+
+- 일대일관계에서 대상 테이블에 외래키가 있는 경우 지연로딩이 왜 되지 않는가?
+
+- Member를 조회할 때, Locker를 지연 로딩으로 설정한 상황, 
+
+- 외래키는 Locker에 있는 상황
+
+
+### 문제
+
+- JPA가 Member를 호출할 때, member.getLocker()의 결과로 Locker의 프록시를 넣어야 할지 null을 넣어야 할지 알 수 없다. Locker 테이블을 직접 조회해서 member_ID 외래키의 존재 여부를 확인하기 전까지 알 방법이 없음
+
+- 결국 Locker가 있는지 확인하려면 Locker 테이블을 확인해야 하므로, JPA는 지연 로딩을 포기하고 즉시 로딩
+
